--- a/.env
+++ b/.env
@@ -39,9 +39,9 @@ Port=9952
 # --- Telegram Bot Token ---
 # TelegramBotToken: API token for the Telegram bot (keep this secret!).
 # Default: empty (Telegram notifications disabled)
-TelegramBotToken=7158543940:AAHqVTxxc2AekT3FZPGXS1Ac7N5xov23C9U
+TelegramBotToken=
 
 # --- Telegram Chat ID ---
 # TelegramChatID: Identifier of the chat or group where the bot sends notifications.
 # Default: empty (Telegram notifications disabled)
-TelegramChatID=306100972
+TelegramChatID=
