--- a/.env
+++ b/.env
@@ -1,31 +1,47 @@
 # xCore Configuration File
 # This file specifies paths and settings for the xCore application.
 # Format: KEY=VALUE
-# Lines starting with # are comments and ignored.
-# If a value is not specified or the file is missing, default values are used.
+# Lines beginning with ‘#’ are comments and ignored.
+# If a value is omitted or this file is missing, defaults will be used.
 
-# DatabasePath: Path to the SQLite database file for storing client and traffic statistics.
+# --- Path to the SQLite database ---
+# DatabasePath: File path for the SQLite database that stores client data and traffic stats.
 # Default: /usr/local/xcore/data.db
 DatabasePath=/usr/local/xcore/data.db
 
-# AccessLogPath: Path to the Xray access log file for tracking client connections.
+# --- Path to the Xray access log ---
+# AccessLogPath: File path for the Xray access log used to track client connections.
 # Default: /usr/local/etc/xray/access.log
 AccessLogPath=/usr/local/etc/xray/access.log
 
+# --- Xray configuration directory ---
 # DirXray: Directory containing Xray configuration files (e.g., config.json).
 # Must end with a slash (/).
 # Default: /usr/local/etc/xray/
 DirXray=/usr/local/etc/xray/
 
-# LUAFilePath: Path to the HAProxy Lua authentication file (.auth.lua).
+# --- HAProxy Lua script path ---
+# LUAFilePath: File path for the HAProxy Lua authentication script (.auth.lua).
 # Default: /etc/haproxy/.auth.lua
 LUAFilePath=/etc/haproxy/.auth.lua
 
-# XIPLLogFile: Path to the log file for recording excessive IP usage.
+# --- IP limit log file ---
+# XIPLLogFile: File path where violations of IP usage limits are recorded.
 # Default: /var/log/xipl.log
 XIPLLogFile=/var/log/xipl.log
 
-# Port: Port number for the xCore API server.
-# Must be a valid port number (1-65535).
+# --- xCore API server port ---
+# Port: TCP port on which the xCore API server listens.
+# Must be between 1 and 65535.
 # Default: 9952
 Port=9952
+
+# --- Telegram Bot Token ---
+# TelegramBotToken: API token for the Telegram bot (keep this secret!).
+# Default: empty (Telegram notifications disabled)
+TelegramBotToken=
+
+# --- Telegram Chat ID ---
+# TelegramChatID: Identifier of the chat or group where the bot sends notifications.
+# Default: empty (Telegram notifications disabled)
+TelegramChatID=
