--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,48 +1,30 @@
 # .goreleaser.yml
 builds:
-  - env:
-      - CGO_ENABLED=1 # Включаем CGO для github.com/mattn/go-sqlite3
+  - binary: xcore
     goos:
       - linux
-      - windows
-      - darwin
     goarch:
       - amd64
       - arm64
-    ignore:
-      - goos: darwin
-        goarch: arm
-      - goos: windows
-        goarch: arm64
-    main: ./main.go
-    binary: xcore
-    ldflags:
-      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
-
-archives:
-  - format: tar.gz
-    name_template: "{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    files:
-      - LICENSE
-      - README.md
-      - .env # Включаем пример конфигурации
-    replacements:
-      darwin: macos
-      amd64: x86_64
+    env:
+      - CGO_ENABLED=0 # Включаем CGO=1 для github.com/mattn/go-sqlite3
+    flags:
+      - -mod=vendor
+    #main: ./main.go
 
 release:
-  github:
-    owner: cortez24rus
-    name: xcore
-  extra_files:
-    - glob: ./LICENSE
-    - glob: ./README.md
-    - glob: ./.env
+  prerelease: auto
 
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
-      - "^ci:"
+brews:
+  -
+    name: XCore-go
+    homepage: https://github.com/cortez24rus/XCore-go
+    tap:
+      owner: cortez24rus
+      name: XCore-go
+    commit_author:
+      name: cortez24rus
+      email: cortez24rus@example.com
+
+checksum:
+  name_template: 'checksums.txt'
