--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,41 @@
-name: Compile and Release xCore
+# .github/workflows/release.yml
+name: goreleaser
 
 on:
   push:
+    # run only against tags
     tags:
-      - "v*"
-  workflow_dispatch: # Позволяет запускать вручную для тестирования
+      - "*"
 
 permissions:
-  contents: write # Необходим для создания релиза
+  contents: write
+  # packages: write
+  # issues: write
+  # id-token: write
 
 jobs:
-  test:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.24.2" # Соответствует версии в go.mod
-
-      - name: Run Tests
-        run: go test -v ./...
-
-  release:
-    needs: test # Запускается только после успешного прохождения тестов
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Необходим для генерации CHANGELOG
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.24.2"
-
+          go-version: stable
+      # More assembly might be required: Docker logins, GPG, etc.
+      # It all depends on your needs.
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          # 'latest', 'nightly', or a semver
+          version: "{{ env.GUTHUB_REF_NAME}}"
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
+          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
+          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
