--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,16 +1,44 @@
+version: 1
+
+before:
+  hooks:
+    - go mod tidy
+
+snapshot:
+  version_template: "{{ .Tag }}"
+checksum:
+  name_template: "checksums.txt"
+
 builds:
-  - binary: xcore
+  - id: build
+    binary: xcore
+    env:
+      - CGO_ENABLED=1
     goos:
       - linux
     goarch:
       - amd64
-    env:
-      - CGO_ENABLED=1
-    flags:
-      - -mod=vendor
+    ldflags:
+      - -s -w
+      - -X main.Version={{ .Tag }}
+
+archives:
+  - id: XCore-go
+    format: tar.gz
+    name_template: "{{ .ProjectName }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+    files:
+      - .env
 
 release:
-  prerelease: auto
+  github:
+    owner: "{{ .Env.GITHUB_REPOSITORY_OWNER }}"
+    name: "{{ .Env.GITHUB_REPOSITORY_NAME }}"
+  name_template: "v{{ .Version }}"
 
-checksum:
-  name_template: 'checksums.txt'
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - "^docs:"
+      - "^test:"
+      - "^ci:"
