--- a/.env
+++ b/.env
@@ -28,7 +28,12 @@ LUAFilePath=/etc/haproxy/.auth.lua
 # --- IP limit log file ---
 # XIPLLogFile: File path where violations of IP usage limits are recorded.
 # Default: /var/log/xipl.log
-XIPLLogFile=/var/log/xipl.log
+XIPLLogFile=/var/log/xcore.log
+
+# --- Banned IP log file ---
+# BannedLogFile: File path for the log that records IP ban and unban events.
+# Default: /var/log/xcore-banned.log
+BannedLogFile=/var/log/xcore-banned.log
 
 # --- xCore API server port ---
 # Port: TCP port on which the xCore API server listens.
