--- a/.env
+++ b/.env
@@ -4,49 +4,58 @@
 # Lines beginning with ‘#’ are comments and ignored.
 # If a value is omitted or this file is missing, defaults will be used.
 
-# --- Path to the SQLite database ---
-# DatabasePath: File path for the SQLite database that stores client data and traffic stats.
-# Default: /usr/local/xcore/data.db
-DatabasePath=/usr/local/xcore/data.db
-
-# --- Path to the Xray access log ---
-# AccessLogPath: File path for the Xray access log used to track client connections.
-# Default: /usr/local/etc/xray/access.log
-AccessLogPath=/usr/local/etc/xray/access.log
-
-# --- Xray configuration directory ---
-# DirXray: Directory containing Xray configuration files (e.g., config.json).
-# Must end with a slash (/).
-# Default: /usr/local/etc/xray/
-DirXray=/usr/local/etc/xray/
-
-# --- HAProxy Lua script path ---
-# LUAFilePath: File path for the HAProxy Lua authentication script (.auth.lua).
-# Default: /etc/haproxy/.auth.lua
-LUAFilePath=/etc/haproxy/.auth.lua
-
-# --- IP limit log file ---
-# XIPLLogFile: File path where violations of IP usage limits are recorded.
-# Default: /var/log/xipl.log
-XIPLLogFile=/var/log/xcore.log
-
-# --- Banned IP log file ---
-# BannedLogFile: File path for the log that records IP ban and unban events.
-# Default: /var/log/xcore-banned.log
-BannedLogFile=/var/log/xcore-banned.log
-
-# --- xCore API server port ---
-# Port: TCP port on which the xCore API server listens.
-# Must be between 1 and 65535.
+# ===== Port Settings =====
+# PORT: TCP port for xCore API server (1-65535)
 # Default: 9952
-Port=9952
+PORT=9952
 
-# --- Telegram Bot Token ---
-# TelegramBotToken: API token for the Telegram bot (keep this secret!).
-# Default: empty (Telegram notifications disabled)
-TelegramBotToken=
+# ===== Telegram Settings =====
+# TELEGRAM_BOT_TOKEN: API token for Telegram bot
+# Default: empty
+TELEGRAM_BOT_TOKEN=
 
-# --- Telegram Chat ID ---
-# TelegramChatID: Identifier of the chat or group where the bot sends notifications.
-# Default: empty (Telegram notifications disabled)
-TelegramChatID=
+# TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
+# Default: empty
+TELEGRAM_CHAT_ID=
+
+# ===== Monitoring Settings =====
+# SERVICES: Comma-separated list of services to monitor
+# Default: xray,haproxy,nginx,fail2ban-server
+SERVICES=
+
+# MEMORY_AVERAGE_INTERVAL: Interval for averaging memory usage (seconds)
+# Default: 120
+MEMORY_AVERAGE_INTERVAL=120
+
+# DISK_THRESHOLD: Disk usage percentage to trigger alerts (0-100)
+# Default: 0
+DISK_THRESHOLD=80
+
+# MEMORY_THRESHOLD: Memory usage percentage to trigger alerts (0-100)
+# Default: 0
+MEMORY_THRESHOLD=80
+
+# ===== Path Settings =====
+# DATABASE_PATH: Path to SQLite database for client data and traffic stats
+# Default: /usr/local/xcore/data.db
+DATABASE_PATH=/opt/xcore/repo/xcore/data.db
+
+# ACCESS_LOG_PATH: Path to Xray access log for client connections
+# Default: /usr/local/etc/xray/access.log
+ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
+
+# XRAY_DIR: Directory for Xray configuration files (must end with /)
+# Default: /usr/local/etc/xray/
+XRAY_DIR=/usr/local/etc/xray/
+
+# LUA_FILE_PATH: Path to HAProxy Lua authentication script
+# Default: /etc/haproxy/.auth.lua
+LUA_FILE_PATH=/etc/haproxy/.auth.lua
+
+# XIP_LOG_FILE: Path to log for IP usage limit violations
+# Default: /var/log/xipl.log
+XIP_LOG_FILE=/var/log/xcore.log
+
+# BANNED_LOG_FILE: Path to log for IP ban/unban events
+# Default: /var/log/xcore-banned.log
+BANNED_LOG_FILE=/var/log/xcore-banned.log
