--- a/.env
+++ b/.env
@@ -4,6 +4,12 @@
 # Lines beginning with ‘#’ are comments and ignored.
 # If a value is omitted or this file is missing, defaults will be used.
 
+# ===== Choise core =====
+# PROXY_TYPE: Type of proxy application (xray or singbox)
+# Available options: xray, singbox
+# Default: xray
+PROXY_TYPE=xray
+
 # ===== Port Settings =====
 # PORT: TCP port for xCore API server (1-65535)
 # Default: 9952
@@ -12,16 +18,16 @@ PORT=9952
 # ===== Telegram Settings =====
 # TELEGRAM_BOT_TOKEN: API token for Telegram bot
 # Default: empty
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=7158543940:AAHqVTxxc2AekT3FZPGXS1Ac7N5xov23C9U
 
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
-TELEGRAM_CHAT_ID=
+TELEGRAM_CHAT_ID=306100972
 
 # ===== Monitoring Settings =====
 # SERVICES: Comma-separated list of services to monitor
 # Default: xray,haproxy,nginx,fail2ban-server
-SERVICES=
+SERVICES=xray,haproxy,nginx,warp-svc,fail2ban-server
 
 # MEMORY_AVERAGE_INTERVAL: Interval for averaging memory usage (seconds)
 # Default: 120
@@ -44,9 +50,9 @@ DATABASE_PATH=/opt/xcore/repo/xcore/data.db
 # Default: /usr/local/etc/xray/access.log
 ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 
-# XRAY_DIR: Directory for Xray configuration files (must end with /)
+# PROXY_DIR: Directory for Proxy configuration files (must end with /)
 # Default: /usr/local/etc/xray/
-XRAY_DIR=/usr/local/etc/xray/
+PROXY_DIR=/usr/local/etc/xray/
 
 # LUA_FILE_PATH: Path to HAProxy Lua authentication script
 # Default: /etc/haproxy/.auth.lua
