--- a/.env
+++ b/.env
@@ -18,11 +18,11 @@ PORT=9952
 # ===== Telegram Settings =====
 # TELEGRAM_BOT_TOKEN: API token for Telegram bot
 # Default: empty
-TELEGRAM_BOT_TOKEN=7158543940:AAHqVTxxc2AekT3FZPGXS1Ac7N5xov23C9U
+TELEGRAM_BOT_TOKEN=
 
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
-TELEGRAM_CHAT_ID=306100972
+TELEGRAM_CHAT_ID=
 
 # ===== Monitoring Settings =====
 # SERVICES: Comma-separated list of services to monitor
