--- a/.env
+++ b/.env
@@ -4,25 +4,28 @@
 # Lines beginning with ‘#’ are comments and ignored.
 # If a value is omitted or this file is missing, defaults will be used.
 
-# ===== Choise core =====
-# PROXY_TYPE: Type of proxy application (xray or singbox)
+# ===== Proxy Core =====
+# CORE_TYPE: Type of proxy core (xray or singbox)
 # Available options: xray, singbox
 # Default: xray
-PROXY_TYPE=xray
+CORE_TYPE=xray
+
 
 # ===== Port Settings =====
 # PORT: TCP port for xCore API server (1-65535)
 # Default: 9952
 PORT=9952
 
-# ===== Telegram Settings =====
-# TELEGRAM_BOT_TOKEN: API token for Telegram bot
-# Default: empty
-TELEGRAM_BOT_TOKEN=
 
+# ===== Telegram Settings =====
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
-TELEGRAM_CHAT_ID=
+TELEGRAM_CHAT_ID=306100972
+
+# TELEGRAM_BOT_TOKEN: API token for Telegram bot
+# Default: empty
+TELEGRAM_BOT_TOKEN=7158543940:AAHqVTxxc2AekT3FZPGXS1Ac7N5xov23C9U
+
 
 # ===== Monitoring Settings =====
 # SERVICES: Comma-separated list of services to monitor
@@ -41,18 +44,19 @@ DISK_THRESHOLD=80
 # Default: 0
 MEMORY_THRESHOLD=80
 
+
 # ===== Path Settings =====
-# DATABASE_PATH: Path to SQLite database for client data and traffic stats
-# Default: /usr/local/xcore/data.db
-DATABASE_PATH=/opt/xcore/repo/xcore/data.db
+# PROXY_DIR: Directory for Proxy configuration files (must end with /)
+# Default: /usr/local/etc/xray/
+CORE_DIR=/usr/local/etc/xray/
 
 # ACCESS_LOG_PATH: Path to Xray access log for client connections
 # Default: /usr/local/etc/xray/access.log
 ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 
-# PROXY_DIR: Directory for Proxy configuration files (must end with /)
-# Default: /usr/local/etc/xray/
-PROXY_DIR=/usr/local/etc/xray/
+# DATABASE_PATH: Path to SQLite database for client data and traffic stats
+# Default: /usr/local/xcore/data.db
+DATABASE_PATH=/opt/xcore/repo/xcore/data.db
 
 # LUA_FILE_PATH: Path to HAProxy Lua authentication script
 # Default: /etc/haproxy/.auth.lua
