--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,7 +25,8 @@ builds:
 
 archives:
   - id: XCore-go
-    format: tar.gz
+    formats:
+      - tar.gz
     name_template: "{{ .ProjectName }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}"
     files:
       - .env
