--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-# xCore Configuration File
-# This file specifies paths and settings for the xCore application.
+# v2ray-stat Configuration File
+# This file specifies paths and settings for the v2ray-stat application.
 # Format: KEY=VALUE
 # Lines beginning with ‘#’ are comments and ignored.
 # If a value is omitted or this file is missing, defaults will be used.
 
-# ===== Proxy Core =====
+# ===== Core Type =====
 # CORE_TYPE: Type of proxy core (xray or singbox)
 # Available options: xray, singbox
 # Default: xray
@@ -12,7 +12,7 @@ CORE_TYPE=xray
 
 
 # ===== Port Settings =====
-# PORT: TCP port for xCore API server (1-65535)
+# PORT: TCP port for v2ray-stat API server (1-65535)
 # Default: 9952
 PORT=9952
 
@@ -55,17 +55,13 @@ CORE_DIR=/usr/local/etc/xray/
 ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 
 # DATABASE_PATH: Path to SQLite database for client data and traffic stats
-# Default: /usr/local/xcore/data.db
-DATABASE_PATH=/opt/xcore/repo/xcore/data.db
-
-# LUA_FILE_PATH: Path to HAProxy Lua authentication script
-# Default: /etc/haproxy/.auth.lua
-LUA_FILE_PATH=/etc/haproxy/.auth.lua
+# Default: /usr/local/v2ray-stat/data.db
+DATABASE_PATH=/opt/xcore/repo/v2ray-stat/data.db
 
 # XIP_LOG_FILE: Path to log for IP usage limit violations
 # Default: /var/log/xipl.log
-XIP_LOG_FILE=/var/log/xcore.log
+XIP_LOG_FILE=/var/log/v2ray-stat.log
 
 # BANNED_LOG_FILE: Path to log for IP ban/unban events
-# Default: /var/log/xcore-banned.log
-BANNED_LOG_FILE=/var/log/xcore-banned.log
+# Default: /var/log/v2ray-stat-banned.log
+BANNED_LOG_FILE=/var/log/v2ray-stat-banned.log
