--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,6 +18,7 @@ builds:
       - amd64
     env:
       - CGO_ENABLED=1
+      - GOFLAGS=-mod=mod
     ldflags:
       - -s -w
       - -X main.Version={{ .Tag }}
@@ -30,6 +31,7 @@ builds:
       - arm64
     env:
       - CGO_ENABLED=0
+      - GOFLAGS=-mod=mod
     ldflags:
       - -s -w
       - -X main.Version={{ .Tag }}
