--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,4 +63,4 @@ jobs:
           file: ./build_assets/*
           tag: ${{ github.ref }}
           file_glob: true
-          1overwrite: true
+          overwrite: true
