--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           cp "${GITHUB_WORKSPACE}/README.md"  build_assets/README.md
           cp "${GITHUB_WORKSPACE}/LICENSE"    build_assets/LICENSE
-          cp "${GITHUB_WORKSPACE}/.env"       build_assets/.env
+          cp "${GITHUB_WORKSPACE}/env"        build_assets/.env
 
       - name: Create checksums
         run: |
