--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,11 +45,14 @@ jobs:
             -ldflags="-X main.Version=${COMMID} -s -w -buildid=" \
             -v .
 
+      - name: List files in workspace
+        run: ls -la ${GITHUB_WORKSPACE}
+
       - name: Copy additional files
         run: |
           cp "${GITHUB_WORKSPACE}/README.md"  build_assets/README.md
           cp "${GITHUB_WORKSPACE}/LICENSE"    build_assets/LICENSE
-          cp "${GITHUB_WORKSPACE}/env"        build_assets/.env
+          cp "${GITHUB_WORKSPACE}/.env"        build_assets/.env
 
       - name: Create checksums
         run: |
