--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,9 @@ jobs:
       - name: List files in workspace
         run: ls -la ${GITHUB_WORKSPACE}
 
+      - name: List build_assets contents
+        run: ls -la build_assets
+
       - name: Copy additional files
         run: |
           cp "${GITHUB_WORKSPACE}/README.md"  build_assets/README.md
