--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,9 +50,9 @@ jobs:
 
       - name: Copy additional files
         run: |
-          cp "${GITHUB_WORKSPACE}/README.md"  build_assets/README.md
-          cp "${GITHUB_WORKSPACE}/LICENSE"    build_assets/LICENSE
-          cp "${GITHUB_WORKSPACE}/.env"       build_assets/.env
+          cp ${GITHUB_WORKSPACE}/.env       ./build_assets/.env
+          cp ${GITHUB_WORKSPACE}/README.md  ./build_assets/README.md
+          cp ${GITHUB_WORKSPACE}/LICENSE    ./build_assets/LICENSE
 
       - name: List build_assets contents
         run: ls -la build_assets
