--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./build_assets/*
+          file: ./build_assets/**
           tag: ${{ github.ref }}
           file_glob: true
           overwrite: true
