--- a/.env
+++ b/.env
@@ -50,13 +50,17 @@ MEMORY_THRESHOLD=80
 # Default: /usr/local/etc/xray/
 CORE_DIR=/usr/local/etc/xray/
 
+# CORE_CONFIG: Path to the core configuration file (e.g., config.json)
+# Default: /usr/local/etc/xray/config.json
+CORE_CONFIG=/usr/local/etc/xray/config.json
+
 # ACCESS_LOG_PATH: Path to Xray access log for client connections
 # Default: /usr/local/etc/xray/access.log
 ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 
 # DATABASE_PATH: Path to SQLite database for client data and traffic stats
-# Default: /usr/local/v2ray-stat/data.db
-DATABASE_PATH=/usr/local/v2ray-stat/data.db
+# Default: /usr/local/etc/v2ray-stat/data.db
+DATABASE_PATH=/usr/local/etc/v2ray-stat/data.db
 
 # XIP_LOG_FILE: Path to log for IP usage limit violations
 # Default: /var/log/xipl.log
