--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,5 +70,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./build_assets/**
           file_glob: true
-          tag: ${{ github.ref }}
+          tag: ${{ github.ref_name }}
           overwrite: true
