--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ CORE_TYPE=xray
 
 # ===== Port Settings =====
 # PORT: TCP port for v2ray-stat API server (1-65535)
-# Default: 995
+# Default: 9952
 PORT=9952
 
 FEATURES=report,network,stats
@@ -22,17 +22,21 @@ FEATURES=report,network,stats
 # ===== Telegram Settings =====
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
-TELEGRAM_CHAT_ID=
+TELEGRAM_CHAT_ID=306100972
 
 # TELEGRAM_BOT_TOKEN: API token for Telegram bot
 # Default: empty
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=7998362423:AAGI95NWGvwuFYXox_95PeHp-j0z9tgN50c
 
 
 # ===== Monitoring Settings =====
 # SERVICES: Comma-separated list of services to monitor
-# Default: xray,haproxy,nginx,fail2ban-server
-SERVICES=
+# Default: xray, fail2ban-server
+SERVICES=xray,haproxy,nginx,fail2ban-server
+
+# MONITOR_TICKER_INTERVAL: Interval for monitoring users and logs (seconds)
+# Default: 10
+MONITOR_TICKER_INTERVAL=10
 
 # MEMORY_AVERAGE_INTERVAL: Interval for averaging memory usage (seconds)
 # Default: 120
@@ -71,4 +75,3 @@ XIP_LOG_FILE=/var/log/v2ray-stat.log
 # BANNED_LOG_FILE: Path to log for IP ban/unban events
 # Default: /var/log/v2ray-stat-banned.log
 BANNED_LOG_FILE=/var/log/v2ray-stat-banned.log
-
