--- a/.env
+++ b/.env
@@ -22,11 +22,11 @@ FEATURES=report,network,stats
 # ===== Telegram Settings =====
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
-TELEGRAM_CHAT_ID=
+TELEGRAM_CHAT_ID=306100972
 
 # TELEGRAM_BOT_TOKEN: API token for Telegram bot
 # Default: empty
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=7998362423:AAGI95NWGvwuFYXox_95PeHp-j0z9tgN50c
 
 
 # ===== Monitoring Settings =====
