--- a/.env
+++ b/.env
@@ -4,22 +4,23 @@
 # Lines beginning with ‘#’ are comments and ignored.
 # If a value is omitted or this file is missing, defaults will be used.
 
-# ===== Core Type =====
 # CORE_TYPE: Type of proxy core (xray or singbox)
 # Available options: xray, singbox
 # Default: xray
 CORE_TYPE=xray
 
-
-# ===== Port Settings =====
 # PORT: TCP port for v2ray-stat API server (1-65535)
 # Default: 9952
 PORT=9952
 
+# FEATURES: Comma-separated list of features to enable for monitoring
+# Available options: report, network, stats
+#   - report: Enables daily reports and statistics monitoring
+#   - network: Enables network usage monitoring
+#   - stats: Enables additional statistics collection
+# Default: none (no features enabled)
 FEATURES=report,network,stats
 
-
-# ===== Telegram Settings =====
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
 TELEGRAM_CHAT_ID=
@@ -28,8 +29,6 @@ TELEGRAM_CHAT_ID=
 # Default: empty
 TELEGRAM_BOT_TOKEN=
 
-
-# ===== Monitoring Settings =====
 # SERVICES: Comma-separated list of services to monitor
 # Default: xray, fail2ban-server
 SERVICES=xray,haproxy,nginx,fail2ban-server
@@ -50,8 +49,6 @@ DISK_THRESHOLD=80
 # Default: 0
 MEMORY_THRESHOLD=80
 
-
-# ===== Path Settings =====
 # PROXY_DIR: Directory for Proxy configuration files (must end with /)
 # Default: /usr/local/etc/xray/
 CORE_DIR=/usr/local/etc/xray/
@@ -60,18 +57,23 @@ CORE_DIR=/usr/local/etc/xray/
 # Default: /usr/local/etc/xray/config.json
 CORE_CONFIG=/usr/local/etc/xray/config.json
 
-# ACCESS_LOG_PATH: Path to Xray access log for client connections
-# Default: /usr/local/etc/xray/access.log
-ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
-
 # DATABASE_PATH: Path to SQLite database for client data and traffic stats
 # Default: /usr/local/etc/v2ray-stat/data.db
 DATABASE_PATH=/usr/local/etc/v2ray-stat/data.db
 
-# XIP_LOG_FILE: Path to log for IP usage limit violations
-# Default: /var/log/xipl.log
-XIP_LOG_FILE=/var/log/v2ray-stat.log
+# V2_LOG_FILE: Path to log for IP usage limit violations
+# Default: /var/log/v2ray-stat.log
+V2_LOG_FILE=/var/log/v2ray-stat.log
 
 # BANNED_LOG_FILE: Path to log for IP ban/unban events
 # Default: /var/log/v2ray-stat-banned.log
 BANNED_LOG_FILE=/var/log/v2ray-stat-banned.log
+
+# ACCESS_LOG_PATH: Path to Xray access log for client connections
+# Default: /usr/local/etc/xray/access.log
+ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
+
+# ACCESS_LOG_REGEX: Regular expression for parsing access logs
+# Default: from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
+ACCESS_LOG_REGEX=from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
+#ACCESS_LOG_REGEX=login: (\S+); ip: ([0-9\.]+)
