--- a/.env
+++ b/.env
@@ -18,8 +18,9 @@ PORT=9952
 #   - report: Enables daily reports and statistics monitoring
 #   - network: Enables network usage monitoring
 #   - stats: Enables additional statistics collection
+#   - auth_lua: Enables modifications to the auth.lua file for user authentication
 # Default: none (no features enabled)
-FEATURES=report,network,stats
+FEATURES=report,network,stats,auth_lua
 
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
@@ -69,11 +70,15 @@ V2_LOG_FILE=/var/log/v2ray-stat.log
 # Default: /var/log/v2ray-stat-banned.log
 BANNED_LOG_FILE=/var/log/v2ray-stat-banned.log
 
+# AUTH_LUA_PATH: Path to the Lua authentication file for HAProxy
+# Default: /etc/haproxy/.auth.lua
+AUTH_LUA_PATH=/etc/haproxy/.auth.lua
+
 # ACCESS_LOG_PATH: Path to Xray access log for client connections
 # Default: /usr/local/etc/xray/access.log
 ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 
 # ACCESS_LOG_REGEX: Regular expression for parsing access logs
 # Default: from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
-ACCESS_LOG_REGEX=from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
+ACCESS_LOG_REGEX=from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)`
 #ACCESS_LOG_REGEX=login: (\S+); ip: ([0-9\.]+)
