--- a/.env
+++ b/.env
@@ -1,11 +1,17 @@
 # v2ray-stat Configuration File
-# This file specifies paths and settings for the v2ray-stat application.
+# This file specifies paths and settings for the v2ray-stat monitoring application.
 # Format: KEY=VALUE
-# Lines beginning with ‘#’ are comments and ignored.
-# If a value is omitted or this file is missing, defaults will be used.
+# Lines starting with '#' are comments and will be ignored.
 
-# CORE_TYPE: Type of proxy core (xray or singbox)
-# Available options: xray, singbox
+
+# ────────────────────────────────
+# Core Settings
+# ────────────────────────────────
+
+# CORE_TYPE: Type of proxy core used for statistics.
+# Accepted values:
+#   - xray     → for Xray-core
+#   - singbox  → for Sing-box
 # Default: xray
 CORE_TYPE=xray
 
@@ -13,14 +19,53 @@ CORE_TYPE=xray
 # Default: 9952
 PORT=9952
 
-# FEATURES: Comma-separated list of features to enable for monitoring
-# Available options: report, network, stats
-#   - report: Enables daily reports and statistics monitoring
-#   - network: Enables network usage monitoring
-#   - stats: Enables additional statistics collection
-#   - auth_lua: Enables modifications to the auth.lua file for user authentication
-# Default: none (no features enabled)
+# API_TOKEN: Token required to access the API endpoints (used for authorization).
+# If empty, access is allowed without authorization.
+# Format: Bearer <token> in the Authorization header
+# Example: Authorization: Bearer mysecrettoken
+# Default: (empty - no authentication)
+API_TOKEN=
+
+
+# ────────────────────────────────
+# Features & Monitoring Options
+# ────────────────────────────────
+
+# FEATURES: Comma-separated list of features to enable.
+# Supported features:
+#   - report     → Enables periodic user reports and daily statistics
+#   - network    → Enables real-time network usage monitoring
+#   - stats      → Enables system and user-level traffic stats
+#   - auth_lua   → Modifies HAProxy auth.lua to support dynamic credentials
+# Default: (none enabled)
 FEATURES=report,network,stats,auth_lua
+
+# SERVICES: Comma-separated list of system services to monitor and notify on failure.
+# Default: xray,fail2ban-server
+SERVICES=xray,haproxy,nginx,fail2ban-server
+
+# MONITOR_TICKER_INTERVAL: Interval (in seconds) for polling monitored services and users.
+# Recommended: 5–60
+# Default: 10
+MONITOR_TICKER_INTERVAL=10
+
+# MEMORY_AVERAGE_INTERVAL: Interval (in seconds) for calculating average memory usage.
+# Used for long-term trend analysis.
+# Default: 120
+MEMORY_AVERAGE_INTERVAL=120
+
+# DISK_THRESHOLD: Percentage (0–100) of disk usage at which a warning is triggered.
+# Default: 0 (disabled)
+DISK_THRESHOLD=80
+
+# MEMORY_THRESHOLD: Percentage (0–100) of memory usage at which a warning is triggered.
+# Default: 0 (disabled)
+MEMORY_THRESHOLD=80
+
+
+# ────────────────────────────────
+# Telegram Notifications
+# ────────────────────────────────
 
 # TELEGRAM_CHAT_ID: Chat or group ID for bot notifications
 # Default: empty
@@ -30,55 +75,47 @@ TELEGRAM_CHAT_ID=
 # Default: empty
 TELEGRAM_BOT_TOKEN=
 
-# SERVICES: Comma-separated list of services to monitor
-# Default: xray, fail2ban-server
-SERVICES=xray,haproxy,nginx,fail2ban-server
 
-# MONITOR_TICKER_INTERVAL: Interval for monitoring users and logs (seconds)
-# Default: 10
-MONITOR_TICKER_INTERVAL=10
+# ────────────────────────────────
+# Paths & Logging
+# ────────────────────────────────
 
-# MEMORY_AVERAGE_INTERVAL: Interval for averaging memory usage (seconds)
-# Default: 120
-MEMORY_AVERAGE_INTERVAL=120
-
-# DISK_THRESHOLD: Disk usage percentage to trigger alerts (0-100)
-# Default: 0
-DISK_THRESHOLD=80
-
-# MEMORY_THRESHOLD: Memory usage percentage to trigger alerts (0-100)
-# Default: 0
-MEMORY_THRESHOLD=80
-
-# PROXY_DIR: Directory for Proxy configuration files (must end with /)
+# CORE_DIR: Directory path where the proxy (Xray or Singbox) config files are stored.
+# Must end with a slash (/)!
 # Default: /usr/local/etc/xray/
 CORE_DIR=/usr/local/etc/xray/
 
-# CORE_CONFIG: Path to the core configuration file (e.g., config.json)
+# CORE_CONFIG: Path to the main configuration file for the proxy core.
+# Used for parsing user settings and inbounds.
 # Default: /usr/local/etc/xray/config.json
 CORE_CONFIG=/usr/local/etc/xray/config.json
 
-# DATABASE_PATH: Path to SQLite database for client data and traffic stats
+# DATABASE_PATH: Path to the SQLite database used for tracking user sessions and usage.
 # Default: /usr/local/etc/v2ray-stat/data.db
 DATABASE_PATH=/usr/local/etc/v2ray-stat/data.db
 
-# V2_LOG_FILE: Path to log for IP usage limit violations
+# V2_LOG_FILE: Path to the log file where v2ray-stat logs violations or issues (e.g. IP limit exceeded).
 # Default: /var/log/v2ray-stat.log
 V2_LOG_FILE=/var/log/v2ray-stat.log
 
-# BANNED_LOG_FILE: Path to log for IP ban/unban events
+# BANNED_LOG_FILE: Path to log file where IP bans/unbans are logged (if applicable).
 # Default: /var/log/v2ray-stat-banned.log
 BANNED_LOG_FILE=/var/log/v2ray-stat-banned.log
 
-# AUTH_LUA_PATH: Path to the Lua authentication file for HAProxy
+# AUTH_LUA_PATH: Full path to HAProxy's `.auth.lua` file, which is dynamically updated if `auth_lua` feature is enabled.
 # Default: /etc/haproxy/.auth.lua
 AUTH_LUA_PATH=/etc/haproxy/.auth.lua
 
-# ACCESS_LOG_PATH: Path to Xray access log for client connections
+# ACCESS_LOG_PATH: Path to the proxy core's access log file.
+# Used for tracking active users, sessions, and IPs.
 # Default: /usr/local/etc/xray/access.log
 ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 
-# ACCESS_LOG_REGEX: Regular expression for parsing access logs
+# ACCESS_LOG_REGEX: Regular expression pattern used to parse `ACCESS_LOG_PATH`.
+# Should extract: source IP, destination host, and user email (or remark).
+# Example default regex for Xray:
+#   from tcp:<SRC_IP> ... tcp:<DST_HOST> ... email: <EMAIL>
 # Default: from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
 ACCESS_LOG_REGEX=from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)`
+# Alternative regex (e.g., for custom login formats):
 #ACCESS_LOG_REGEX=login: (\S+); ip: ([0-9\.]+)
