--- a/.env
+++ b/.env
@@ -28,6 +28,17 @@ API_TOKEN=
 
 
 # ────────────────────────────────
+# Timezone Settings
+# ────────────────────────────────
+
+# TIMEZONE: IANA timezone name for the application (e.g., Europe/Amsterdam/Amsterdam for UTC+2).
+# If empty, the TZ environment variable is used. If TZ is also empty, defaults to UTC.
+# Examples: Asia/Singapore, Europe/Amsterdam, America/New_York
+# Default: (empty)
+TIMEZONE=Asia/Krasnoyarsk
+
+
+# ────────────────────────────────
 # Features & Monitoring Options
 # ────────────────────────────────
 
