--- a/.env
+++ b/.env
@@ -44,12 +44,12 @@ TIMEZONE=Europe/Amsterdam
 
 # FEATURES: Comma-separated list of features to enable.
 # Supported features:
-#   - report     → Enables periodic user reports and daily statistics
+#   - telegram   → Enables Telegram notifications, including periodic user reports and daily statistics
 #   - network    → Enables real-time network usage monitoring
 #   - stats      → Enables system and user-level traffic stats
 #   - auth_lua   → Modifies HAProxy auth.lua to support dynamic credentials
 # Default: (none enabled)
-FEATURES=report,network,stats,auth_lua
+FEATURES=telegram,network,stats,auth_lua
 
 # SERVICES: Comma-separated list of system services to monitor and notify on failure.
 # Default: xray,fail2ban-server
