--- a/.env
+++ b/.env
@@ -127,6 +127,6 @@ ACCESS_LOG_PATH=/usr/local/etc/xray/access.log
 # Example default regex for Xray:
 #   from tcp:<SRC_IP> ... tcp:<DST_HOST> ... email: <EMAIL>
 # Default: from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
-ACCESS_LOG_REGEX=from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)`
+ACCESS_LOG_REGEX=from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)
 # Alternative regex (e.g., for custom login formats):
 #ACCESS_LOG_REGEX=login: (\S+); ip: ([0-9\.]+)
