--- a/.env
+++ b/.env
@@ -60,18 +60,11 @@ SERVICES=xray,haproxy,nginx,fail2ban-server
 # Default: 10
 MONITOR_TICKER_INTERVAL=10
 
-# MEMORY_AVERAGE_INTERVAL: Interval (in seconds) for calculating average memory usage.
-# Used for long-term trend analysis.
-# Default: 120
-MEMORY_AVERAGE_INTERVAL=120
-
-# DISK_THRESHOLD: Percentage (0–100) of disk usage at which a warning is triggered.
-# Default: 0 (disabled)
-DISK_THRESHOLD=80
-
-# MEMORY_THRESHOLD: Percentage (0–100) of memory usage at which a warning is triggered.
-# Default: 0 (disabled)
-MEMORY_THRESHOLD=80
+# ONLINE_RATE_THRESHOLD: Minimum rate threshold in bits per second (bps) to consider a user online.
+# If a user's rate is greater than or equal to this value, their last_seen status is set to "online".
+# If below, last_seen is set based on the last traffic time (timestamp or empty).
+# Default: 0 (all non-zero rates are considered online)
+ONLINE_RATE_THRESHOLD=0
 
 
 # ────────────────────────────────
@@ -85,6 +78,19 @@ TELEGRAM_CHAT_ID=
 # TELEGRAM_BOT_TOKEN: API token for Telegram bot
 # Default: empty
 TELEGRAM_BOT_TOKEN=
+
+# MEMORY_AVERAGE_INTERVAL: Interval (in seconds) for calculating average memory usage.
+# Used for long-term trend analysis.
+# Default: 120
+MEMORY_AVERAGE_INTERVAL=120
+
+# DISK_THRESHOLD: Percentage (0–100) of disk usage at which a warning is triggered.
+# Default: 0 (disabled)
+DISK_THRESHOLD=80
+
+# MEMORY_THRESHOLD: Percentage (0–100) of memory usage at which a warning is triggered.
+# Default: 0 (disabled)
+MEMORY_THRESHOLD=80
 
 
 # ────────────────────────────────
