--- a/.env
+++ b/.env
@@ -64,7 +64,7 @@ MONITOR_TICKER_INTERVAL=10
 # If a user's rate is greater than or equal to this value, their last_seen status is set to "online".
 # If below, last_seen is set based on the last traffic time (timestamp or empty).
 # Default: 0 (all non-zero rates are considered online)
-ONLINE_RATE_THRESHOLD=0
+ONLINE_RATE_THRESHOLD=20
 
 
 # ────────────────────────────────
