--- a/.env
+++ b/.env
@@ -60,11 +60,11 @@ SERVICES=xray,haproxy,nginx,fail2ban-server
 # Default: 10
 MONITOR_TICKER_INTERVAL=10
 
-# ONLINE_RATE_THRESHOLD: Minimum rate threshold in bits per second (bps) to consider a user online.
+# ONLINE_RATE_THRESHOLD: Minimum rate threshold in kilobits per second (kbps) to consider a user online.
 # If a user's rate is greater than or equal to this value, their last_seen status is set to "online".
-# If below, last_seen is set based on the last traffic time (timestamp or empty).
+# If below, last_seen is set based on the last traffic time (timestamp).
 # Default: 0 (all non-zero rates are considered online)
-ONLINE_RATE_THRESHOLD=20
+ONLINE_RATE_THRESHOLD=0
 
 
 # ────────────────────────────────
